[project]
name="accupatt"
version="2.0"
description="Aircraft Spray Pattern Testing Analysis"

[tool.poetry]
name = "accupatt"
version = "2.0"
description = "Aircraft Spray Pattern Testing Application"
authors = ["gill14 <59205277+gill14@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
seabreeze = "^2.0.3"
pyserial = "^3.5"
matplotlib = "^3.5.1"
scipy = "^1.7.3"
pyqtgraph = "^0.12.3"
reportlab = "3.6.10"
svglib = "^1.4"
pandas = "^1.3.5"
numpy = "^1.22.0"
openpyxl = "^3.0.9"
openpyxl-image-loader = "^1.0.5"
superqt = "^0.3.3"
PyQt6 = "^6.2.2"
SQLAlchemy = "^1.4.36"
alembic = "^1.7.7"
imutils = "^0.5.4"
opencv-python = "4.5.5.64"
scikit-image = "^0.19.2"
Send2Trash = "^1.8.0"

[tool.poetry.dev-dependencies]
black = ">=22"
pyinstaller = "^5.2"
py2app = "^0.28.2"

[tool.setuptools]
py-modules = []

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
