[project]
name="accupatt"
version="2.0"
description="Aircraft Spray Pattern Testing Analysis"

[tool.poetry]
name = "accupatt"
version = "2.0"
description = "Aircraft Spray Pattern Testing Application"
authors = ["gill14 <59205277+gill14@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
seabreeze = {version = "^2.4.0", extras = ["pyseabreeze"]}
pyserial = "^3.5"
matplotlib = "^3.5.1"
scipy = "^1.7.3"
pyqtgraph = "^0.12.3"
reportlab = "^4.0.0"
svglib = "^1.4"
pandas = "^1.3.5"
numpy = "^1.22.0"
openpyxl = "^3.0.9"
openpyxl-image-loader = "^1.0.5"
superqt = "^0.3.3"
PyQt6 = "^6.2.2"
SQLAlchemy = "^1.4.36"
alembic = "^1.7.7"
imutils = "^0.5.4"
opencv-python-headless = "^4.8.0.76"
scikit-image = "^0.20.0"
Send2Trash = "^1.8.0"
pyusb = "^1.2.1"
libusb = "^1.0.26b5"

[tool.poetry.group.dev.dependencies]
black = ">=22"

[tool.poetry.group.dev-win]
optional = true

[tool.poetry.group.dev-win.dependencies]
pyinstaller = "^5.2"

[tool.poetry.group.dev-osx]
optional = true

[tool.poetry.group.dev-osx.dependencies]
py2app = "^0.28.2"

[tool.setuptools]
py-modules = []

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
